fix cart icon align

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -57,8 +57,8 @@ body {
 }
 
 .cart-img img {
-  max-height: 6em;
-  /* width: 6em; */
+  height: 6em;
+  width: 6em;
 }
 
 article,
